--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: 七七会员管理系统
+email: admin@member77.top
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  免费的会员管理系统，支持金额卡，次卡，年卡，月卡，周卡等，适用于美容美发，汽车服务，教育培训等各种充值消费的场景
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username: jekyll
+github_username: member77
+locale: "zh_CN"
 
 # Build settings
 theme: minima
